--- a/Css/main.css
+++ b/Css/main.css
@@ -1,3 +1,38 @@
 body{
-  background-color: #000000;
+  background-color: rgb(218, 81, 117);
+}
+#Blanca{
+  position: relative;
+  left: 30%;
+}
+hr{
+  border: 2px solid purple;
+  left: 0%;
+  position: absolute;
+  width:  100px;
+}
+section{
+
+  width: 80%;
+  margin: 5% 10%;
+}
+div.retrato img{
+  height: 250px;
+  width: 100%;
+}
+.retrato{
+
+  display: inline-block;
+  height: 300px;
+  margin-left: 10%;
+  width: 230px;
+}
+p{
+ position: relative;
+ bottom:  15%;
+ font-family: 'Alegreya Sans SC', sans-serif;
+ text-shadow: 3px;
+color: #911b82;
+
+
 }
