--- a/Css/main.css
+++ b/Css/main.css
@@ -1,15 +1,20 @@
 body{
-  background-color: rgb(218, 81, 117);
+  background-color: #000000;
 }
 #Blanca{
   position: relative;
   left: 30%;
+  height: 300px;
+  width: 22%;
 }
 hr{
-  border: 2px solid purple;
+  border: 4px solid purple;
   left: 0%;
   position: absolute;
   width:  100px;
+}
+h2{
+  color: #f7ef24;
 }
 section{
 
@@ -17,8 +22,10 @@ section{
   margin: 5% 10%;
 }
 div.retrato img{
-  height: 250px;
-  width: 100%;
+  height: 350px;
+  width: 130%;
+  border-style: groove;
+  border-color: #d6e626;
 }
 .retrato{
 
@@ -31,8 +38,11 @@ p{
  position: relative;
  bottom:  15%;
  font-family: 'Alegreya Sans SC', sans-serif;
- text-shadow: 3px;
-color: #911b82;
+ font-size: 30px;
+ color: #911b82;
+ background-color: #000000;
+display: inline;
+
 
 
 }
